--- a/src/app/pages/loans/loans.html
+++ b/src/app/pages/loans/loans.html
@@ -6,7 +6,7 @@
 
     <form (ngSubmit)="submitForm()" (keydown.enter)="onEnter($event)">
         <!-- Hidden input for LeadiD universal lead id (populated by script) -->
-        <input type="hidden" name="universal_leadid" id="universal_leadid" />
+        <input type="hidden" name="leadid_token" id="leadid_token" />
         <!-- Hidden input for TrustedForm cert URL (populated by script) -->
         <input type="hidden" name="xxTrustedFormCertUrl" id="xxTrustedFormCertUrl" />
         <div class="question-box">
